--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,23 @@
 version: '3.8'
 
-# Services
 services:
 
-    # PHP Service
     php:
         build:
-            dockerfile: php-dockerfile
+            dockerfile: docker-conf/php-dockerfile
             context: .
         volumes:
-            - ./:/var/www/html
-            - vendor:/var/www/html/vendor 
+            - ./app:/var/www/html/app
+            - ./config:/var/www/html/config
+            - ./www:/var/www/html/www
             - type: bind
-              source: ./docker/php.ini
+              source: ./docker-conf/php/php.ini
               target: /usr/local/etc/php/conf.d/php.ini
             - type: tmpfs
               target: /var/www/html/temp
             - type: tmpfs
               target: /var/www/html/log
 
-    # Nginx Service
     nginx:
         image: nginx:latest
         ports:
@@ -27,17 +25,6 @@ services:
         links:
             - 'php'
         volumes:
-            - ./docker:/etc/nginx/conf.d
+            - ./docker-conf/nginx:/etc/nginx/conf.d
         depends_on:
             - php
-
-    # Composer
-    composer:
-        build:
-            dockerfile: composer-dockerfile
-            context: . 
-        volumes:
-            - vendor:/app
-
-volumes:
-    vendor:
