--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
         volumes:
             - ./app:/var/www/html/app
             - ./config:/var/www/html/config
-            - ./www:/var/www/html/www
+            - type: bind
+              source: ./www/index.php
+              target: /var/www/html/www/index.php
             - type: bind
               source: ./docker-conf/php/php.ini
               target: /usr/local/etc/php/conf.d/php.ini
@@ -28,5 +30,6 @@ services:
             - 'php'
         volumes:
             - ./docker-conf/nginx:/etc/nginx/conf.d
+            - ./www:/var/www/html/www
         depends_on:
             - php
